--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://i.imgur.com/l7StfE9.png">
+        <img src="https://gifdb.com/images/high/puppet-with-fire-exdjlk4bbjsk381m.gif">
     </div>
     <audio autoplay loop>
         <source src="aa.mp3" type="audio/mpeg">
